--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.controldecompras.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="INICIO"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.controldecompras.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="COMPRAS"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.controldecompras.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="ALGO"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
