--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,32 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/home_icon"
+            android:title="Inicio" />
     </group>
+
+    <item android:title="Buys">
+        <menu>
+            <item
+                android:id="@+id/nav_nueva_compra"
+                android:icon="@drawable/carrito_icon"
+                android:title="Nueva Compra" />
+
+            <item
+                android:id="@+id/nav_gallery"
+                android:icon="@drawable/historial_icon"
+                android:title="Historial" />
+        </menu>
+    </item>
+
+    <item android:title="Settings">
+        <menu>
+            <item
+                android:id="@+id/nav_slideshow"
+                android:icon="@drawable/about_icon"
+                android:title="About" />
+        </menu>
+    </item>
+
+
 </menu>
